# uniq

./: .gitignore  LICENSE  README.md  build.sh  buildtest.sh  test.cpp  uniq.h  utils.h
benchmarks/: final.cpp  main.cpp  main_bench.cpp  testqueue.cbp  testqueue.depend  testqueue.layout
c/: nutshell.c
cpp/: build  build.sh  buildtest.sh  color.h  delegates.cpp  getlibs.sh  helloGL2.cpp  makeit.sh  pingpong.cpp  pool.h  prime.cpp  test  test.cpp  timer.cpp  uniq.h
cpp/doc/: benchmarks.ods
cpp/lib/: Actor.h  Atomic.h  Benchmark.h  (+28 more)
csharp/: QueueTest.sln  Test.cs  UniQ.cs  build.bat  build.sh
doc/: states.md  under-the-hoods.md
js/: consumer.js  producer.js  test.js  test0.js  uniq.js
lib/: Actor.h  Atomic.h  Benchmark.h  Color.h  Counter.h  Event.cc  Event.h  EventEmitter.h  Id.h  Log.h  Name.h  Node.h  OpenQueue.h  Profiler.h  Set.h  State.h  ThreadPool.h  Time.h  Vector.h  Worker.h  call.h  fs.h  hello.h  newwatch.h  numtypes.h  pool.h  queue.h  sha256.h  simd.h  std.h  terminal.h  terminal.test.h  test.cc  test.h  timer.h  uniq.h  utils.h
node/: binding.gyp  hello.cpp  nodeuniq.cpp  package.json
nutshell/: README.md  main.cc  queue.h
pascal/: QueueTests.dpr  fncs.pas  main.pas  queuetest.pas  sets.pas  thrds.pas  uniq.pas  utils.pas
rust/: main.rs  queue.rs  queue.test.rs
sandbox/: README.md  build  build.sh  hello.cpp  nutshell.cpp
tests/: CMakeLists.txt  benchmarks.cc  benchmarks2.cc  build  hello.cc  mrmw.cc  mrmw2.cc  pingpong.cc  prime.cc  profiler.cc  tests.cc
ts/: index.html  package.json  queue.test.ts  queue.ts  run.sh  utils.ts
(+46 files in other folders)
